# cmake-dadalisp

./: CMakeLists.txt  dadalisp.c  foo.lsp
